--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
     </main>
     
     <footer style="margin-top: 50px; padding: 20px; background-color: #2c3e50; color: white; text-align: center;">
-        <p>مشروع طلابي - مسارك © 2024</p>
+        <p>مشروع طلابي بسيط- مسارك © 2024</p>
     </footer>
     
     <script src="script.js"></script>
 </body>
+
 </html>
