--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <a href="index.html">🏠 الرئيسية</a>
         <a href="mutaqadi.html">👤 للمتقاضي</a>
         <a href="terms.html">📚 المصطلحات</a>
+        <a href="about.html">ℹ️ من نحن</a>  
+
     </nav>
     
     <main>
@@ -50,3 +52,4 @@
 </body>
 
 </html>
+
